# llm-stt

location/src/location/: config.py  engine.py  followup_watcher.py  main.py
mixed/src/mixed/: config.py  engine.py  followup_watcher.py  main.py
result/: pyproject.toml
result/scripts/: run_result.sh
result/src/result/: config.py  file_utils.py  main.py  watcher.py
router/: pyproject.toml
router/scripts/: run_router.sh
router/src/router/: config.py  file_utils.py  main.py  openai_router.py  watcher.py
symptom/: pyproject.toml
symptom/scripts/: run_symptom.sh
symptom/src/symptom/: config.py  engine.py  followup_watcher.py  initial_watcher.py  llm_client.py  main.py  watcher.py
