[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "result"
version = "0.1.0"
description = "Final result output package"
requires-python = ">=3.8"

[project.scripts]
result = "result.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
